--- a/app/react/controllers/Uploads/scss/upload.scss
+++ b/app/react/controllers/Uploads/scss/upload.scss
@@ -1,5 +1,9 @@
 @import "../../App/scss/Vars.scss";
 
+.metadata {
+  padding: 1em 0;
+}
+
 .upload-documents {
   > tbody {
     > tr {
